--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-themes": "devextreme build",
+    "postinstall": "npm run build-themes"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "sass": "^1.34.1",
+    "vue-router": "^3.0.1",
+    "devextreme": "^21.1.5",
+    "devextreme-vue": "^21.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,7 +24,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "devextreme-cli": "1.2.21",
+    "sass-loader": "^10",
+    "devextreme-themebuilder": "^21.1.5"
   },
   "eslintConfig": {
     "root": true,
